--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,15 @@ html,body{
   text-align:center;
   min-width:260px;
   color:#333;
+  background:#C0C0C0;
 }
 #main{
   margin:30px auto;
   padding:15px;
   border:0px solid;
   border-radius:5px;
-  background:#eee;
+  background:#C0C0C0;
+  
 }
 img{
   max-width: 50%; 
@@ -22,8 +24,9 @@ img{
   margin:-5px;
   margin-top:20px;
   width:100%;
-  border:5px solid white;
+  
   background:white;
+  background:#C0C0C0;
 }
 #img-caption{
   margin:15px;
@@ -31,6 +34,7 @@ img{
 #headline{
   margin-top:50px;
   text-align:left;
+  
 }
 ul{
   max-width:550px;
